[#12673] Include serviceType in applicationUid creation